Refacroring package: cuircuits